--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,4 @@
-# cloudbuild.yaml
 steps:
-  # Step 1: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
       [
@@ -8,8 +6,6 @@ steps:
         '-t', 'asia-south1-docker.pkg.dev/b21forge/b21forge/test/wallex-app:$SHORT_SHA',
         '.'
       ]
-
-  # Step 2: Push Docker image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args:
       [
@@ -17,6 +13,8 @@ steps:
         'asia-south1-docker.pkg.dev/b21forge/b21forge/test/wallex-app:$SHORT_SHA'
       ]
 
-# List of images to register in build history
 images:
   - 'asia-south1-docker.pkg.dev/b21forge/b21forge/test/wallex-app:$SHORT_SHA'
+
+options:
+  logging: CLOUD_LOGGING_ONLY
