--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,18 +3,18 @@ steps:
     args:
       [
         'build',
-        '-t', 'asia-south1-docker.pkg.dev/b21forge/test/wallex-app:$SHORT_SHA',
+        '-t', 'asia-south1-docker.pkg.dev/b21forge/test/testimages:$BUILD_ID',
         '.'
       ]
   - name: 'gcr.io/cloud-builders/docker'
     args:
       [
         'push',
-        'asia-south1-docker.pkg.dev/b21forge/test/wallex-app:$SHORT_SHA'
+        'asia-south1-docker.pkg.dev/b21forge/test/testimages:$BUILD_ID'
       ]
 
 images:
-  - 'asia-south1-docker.pkg.dev/b21forge/test/wallex-app:$SHORT_SHA'
+  - 'asia-south1-docker.pkg.dev/b21forge/test/testimages:$BUILD_ID'
 
 options:
   logging: CLOUD_LOGGING_ONLY
