--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,21 +41,21 @@ jobs:
         run: |
           aws ecr get-login-password --region "$AWS_REGION" | docker login --username AWS --password-stdin "$ECR_REPO"
 
-      # Step 5: Build Docker image
+      # Step 5: Build Docker image with GitHub build number as tag
       - name: Build Docker image
         run: |
           set -e
-          IMAGE_TAG=$(date +%Y%m%d%H%M%S)
+          IMAGE_TAG=${{ github.run_number }}
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "Building image with tag: $IMAGE_TAG"
           docker build -t "$ECR_REPO:$IMAGE_TAG" .
-          docker tag "$ECR_REPO:$IMAGE_TAG" "$ECR_REPO:latest"
 
       # Step 6: Push Docker image to ECR
       - name: Push Docker image to ECR
         run: |
           set -e
+          echo "Pushing image: $ECR_REPO:$IMAGE_TAG"
           docker push "$ECR_REPO:$IMAGE_TAG"
-          docker push "$ECR_REPO:latest"
 
       # Step 7: Update ECS task definition with the new image
       - name: Update task definition with new image
@@ -78,7 +78,7 @@ jobs:
             --output text)
           echo "TASK_DEF_ARN=$TASK_DEF_ARN" >> $GITHUB_ENV
 
-      # ✅ Step 9: Deploy new task definition to ECS service
+      # Step 9: Deploy new task definition to ECS service
       - name: Deploy new task definition to ECS service
         run: |
           set -e
